2001-08-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Use AC_PREREQ to force autoconf 2.50.
	Bump version to 1.3.4.

	* NEWS:
	* README.CVS: Update.

2001-07-25  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Makefile.am (CLEANFILES): Clean Display.menu.

2001-07-24  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* autogen.sh: Improved ordering; stop on error; use "aclocal -I m4".

	* acinclude.m4: Remove.

	* m4/smr_OPTIONAL_LIB.m4:
	* m4/smr_REQUIRED_LIB.m4:
	* m4/smr_WITH_BUILD_PATH.m4: New files.  These replace the old
	smr_CHECK_LIB macro in acinclude.m4.

	* configure.in: Use new macros.  Check for glut, GLU, and GL
	libraries.  Add AM_CONFIG_HEADER.

	* Makefile.am: Link Display using GL_LIBS.

2001-07-09  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* acinclude.m4 (AC_HELP_STRING): Disable the too-clever
        pretty formatter.

	* Makefile.am (Display_LDADD): Put X_LIBS (which holds the -L
	options) ahead of -l options.

2001-06-05  Peter Neelin <neelin@bic.mni.mcgill.ca>

	* peter_fix_for_jens_June2001: Tag added.

	* release-1_3_3: Tag added. This is bogus - no change from
	previous version.
	
	* callbacks/segmenting: When saving labels to a minc file in
	function save_label_data, copy header info from backup file rather
	than from original file since frequently that file is being
	overwritten and under some circumstances an error will occur.

2001-06-04  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Use 3-argument AC_DEFINE for HAVE_MALLINFO;
	otherwise autoheader gives error.

2001-05-27  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* release-1_3_2: Tag added.  The package built contains identical
	source code to that released as 1.3.1.

	* Include/connect.h:
	* Include/globals.h:
	* Include/graphics.h:
	* Include/graphics_dependent.h:
	* Include/graphics_types.h:
	* Include/marker_segment.h:
	* Include/surface_fitting.h: Removed files.
