@@ -5,6 +5,16 @@ AM_INIT_AUTOMAKE(Display,1.3.4)
 AM_CONFIG_HEADER(config.h)
 
 
+dnl Optional workaround for buggy compiler.
+AC_ARG_ENABLE([menu-fallback],
+[  --disable-menu-fallback    Omit compiled-in fallback for menu.],
+[if test "$enableval" = no; then
+    AC_DEFINE(DISPLAY_DISABLE_MENU_FALLBACK,1,
+              [define to disable compiled-in fallback menu])
+ fi
+])
+
+
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_LN_S
