@@ -2,3 +2,4 @@ noinst_LIBRARIES = libdummy.a
 libdummy_a_SOURCES = display.c event_loop.c graphics.c main.c three_d.c transforms.c
 
 INCLUDES = -I$(top_srcdir)/Include -I$(top_srcdir)/Graphics/Include $(MNI_INCLUDES)
+AM_CFLAGS = -DHARD_CODED_DISPLAY_DIRECTORY1=\"$(libdir)\"
